feat: openAPI修正＆自動生成
