# api/examples/server/server.rs
@@ -1,0 +1,198 @@
+//! Main library entry point for openapi_client implementation.
+
+#![allow(unused_imports)]
+
+use async_trait::async_trait;
+use futures::{future, Stream, StreamExt, TryFutureExt, TryStreamExt};
+use hyper::server::conn::http1;
+use hyper_util::rt::TokioIo;
+use hyper::service::{service_fn, Service};
+use log::info;
+use std::future::Future;
+use std::marker::PhantomData;
+use std::net::SocketAddr;
+use std::sync::{Arc, Mutex};
+use std::task::{Context, Poll};
+use swagger::{Has, XSpanIdString};
+use swagger::auth::MakeAllowAllAuthenticator;
+use swagger::EmptyContext;
+use tokio::net::TcpListener;
+
+#[cfg(not(any(target_os = "macos", target_os = "windows", target_os = "ios")))]
+use openssl::ssl::{Ssl, SslAcceptor, SslAcceptorBuilder, SslFiletype, SslMethod};
+
+use openapi_client::models;
+
+/// Builds an SSL implementation for Simple HTTPS from some hard-coded file names
+pub async fn create(addr: &str, https: bool) {
+    let addr: SocketAddr = addr.parse().expect("Failed to parse bind address");
+    let listener = TcpListener::bind(&addr).await.unwrap();
+
+    let server = Server::new();
+
+    let service = MakeService::new(server);
+    let service = MakeAllowAllAuthenticator::new(service, "cosmo");
+
+    #[allow(unused_mut)]
+    let mut service =
+        openapi_client::server::context::MakeAddContext::<_, EmptyContext>::new(
+            service
+        );
+
+    if https {
+        #[cfg(any(target_os = "macos", target_os = "windows", target_os = "ios"))]
+        {
+            unimplemented!("SSL is not implemented for the examples on MacOS, Windows or iOS");
+        }
+
+        #[cfg(not(any(target_os = "macos", target_os = "windows", target_os = "ios")))]
+        {
+            let mut ssl = SslAcceptor::mozilla_intermediate_v5(SslMethod::tls()).expect("Failed to create SSL Acceptor");
+
+            // Server authentication
+            ssl.set_private_key_file("examples/server-key.pem", SslFiletype::PEM).expect("Failed to set private key");
+            ssl.set_certificate_chain_file("examples/server-chain.pem").expect("Failed to set certificate chain");
+            ssl.check_private_key().expect("Failed to check private key");
+
+            let tls_acceptor = ssl.build();
+
+            info!("Starting a server (with https)");
+            loop {
+                if let Ok((tcp, addr)) = listener.accept().await {
+                    let ssl = Ssl::new(tls_acceptor.context()).unwrap();
+                    let service = service.call(addr);
+
+                    tokio::spawn(async move {
+                        let tls = tokio_openssl::SslStream::new(ssl, tcp).map_err(|_| ())?;
+                        let service = service.await.map_err(|_| ())?;
+
+                        http1::Builder::new()
+                            .serve_connection(TokioIo::new(tls), service)
+                            .await
+                            .map_err(|_| ())
+                    });
+                }
+            }
+        }
+    } else {
+        info!("Starting a server (over http, so no TLS)");
+        println!("Listening on http://{}", addr);
+
+        loop {
+            // When an incoming TCP connection is received grab a TCP stream for
+            // client<->server communication.
+            //
+            // Note, this is a .await point, this loop will loop forever but is not a busy loop. The
+            // .await point allows the Tokio runtime to pull the task off of the thread until the task
+            // has work to do. In this case, a connection arrives on the port we are listening on and
+            // the task is woken up, at which point the task is then put back on a thread, and is
+            // driven forward by the runtime, eventually yielding a TCP stream.
+            let (tcp_stream, addr) = listener.accept().await.expect("Failed to accept connection");
+
+            let service = service.call(addr).await.unwrap();
+            let io = TokioIo::new(tcp_stream);
+            // Spin up a new task in Tokio so we can continue to listen for new TCP connection on the
+            // current task without waiting for the processing of the HTTP1 connection we just received
+            // to finish
+            tokio::task::spawn(async move {
+                // Handle the connection from the client using HTTP1 and pass any
+                // HTTP requests received on that connection to the `hello` function
+                let result = http1::Builder::new()
+                    .serve_connection(io, service)
+                    .await;
+                if let Err(err) = result
+                {
+                    println!("Error serving connection: {err:?}");
+                }
+            });
+        }
+    }
+}
+
+#[derive(Copy)]
+pub struct Server<C> {
+    marker: PhantomData<C>,
+}
+
+impl<C> Server<C> {
+    pub fn new() -> Self {
+        Server{marker: PhantomData}
+    }
+}
+
+impl<C> Clone for Server<C> {
+    fn clone(&self) -> Self {
+        Self {
+            marker: PhantomData,
+        }
+    }
+}
+
+
+use jsonwebtoken::{decode, encode, errors::Error as JwtError, Algorithm, DecodingKey, EncodingKey, Header, TokenData, Validation};
+use serde::{Deserialize, Serialize};
+use swagger::auth::Authorization;
+use crate::server_auth;
+
+
+use openapi_client::{
+    Api,
+    PingResponse,
+    UpdateMergedImageResponse,
+    UploadImageResponse,
+    UploadMergedImageResponse,
+};
+use openapi_client::server::MakeService;
+use std::error::Error;
+use swagger::ApiError;
+
+#[async_trait]
+impl<C> Api<C> for Server<C> where C: Has<XSpanIdString> + Send + Sync
+{
+    /// 疎通確認
+    async fn ping(
+        &self,
+        context: &C) -> Result<PingResponse, ApiError>
+    {
+        info!("ping() - X-Span-ID: {:?}", context.get().0.clone());
+        Err(ApiError("Api-Error: Operation is NOT implemented".into()))
+    }
+
+    /// 複数画像を束ねたファイルの指定枚目だけ更新する
+    async fn update_merged_image(
+        &self,
+        signed_url: String,
+        index: i32,
+        metadata: String,
+        file: swagger::ByteArray,
+        context: &C) -> Result<UpdateMergedImageResponse, ApiError>
+    {
+        info!("update_merged_image(\"{}\", {}, \"{}\", {:?}) - X-Span-ID: {:?}", signed_url, index, metadata, file, context.get().0.clone());
+        Err(ApiError("Api-Error: Operation is NOT implemented".into()))
+    }
+
+    /// １枚の画像をDDS形式に変換し、ストレージにアップロードする
+    async fn upload_image(
+        &self,
+        signed_url: String,
+        metadata: String,
+        file: Option<swagger::ByteArray>,
+        context: &C) -> Result<UploadImageResponse, ApiError>
+    {
+        info!("upload_image(\"{}\", \"{}\", {:?}) - X-Span-ID: {:?}", signed_url, metadata, file, context.get().0.clone());
+        Err(ApiError("Api-Error: Operation is NOT implemented".into()))
+    }
+
+    /// 複数枚の画像をDDS形式に変換し、1ファイルにまとめ、ストレージにアップロードする
+    async fn upload_merged_image(
+        &self,
+        signed_url: String,
+        metadata: String,
+        files: Option<&Vec<models::File>>,
+        context: &C) -> Result<UploadMergedImageResponse, ApiError>
+    {
+        info!("upload_merged_image(\"{}\", \"{}\", {:?}) - X-Span-ID: {:?}", signed_url, metadata, files, context.get().0.clone());
+        Err(ApiError("Api-Error: Operation is NOT implemented".into()))
+    }
+
+}
